--- a/custom_components/iris_light/manifest.json
+++ b/custom_components/iris_light/manifest.json
@@ -1,12 +1,12 @@
 {
-  "domain": "iris_light_loupe_page",
+  "domain": "iris_light",
   "name": "Iris Light",
   "codeowners": [
     "@mikan_megane"
   ],
   "config_flow": true,
   "dependencies": [],
-  "documentation": "https://www.home-assistant.io/integrations/iris_light_loupe_page",
+  "documentation": "https://www.home-assistant.io/integrations/iris_light",
   "homekit": {},
   "iot_class": "local_push",
   "requirements": [],
